# yeastr-test-proj

./: MANIFEST.in  build.py  pyproject.toml
localci/: functional_raw_out_py313  loops_raw_out_py313  macros_out_diff_py313_py38  macros_out_py38  quirk-script-call2comp  quirk-script-functional  quirk-script-loops  quirk-src-call2comp  quirk-src-functional  quirked-quirk-script-loops
src/: functional.py
src/yeastr_test/: backporting_dict_ops.pyy  call2comp.ypy  functional.py  loops.py  macros.py  macros.pyy  macros.ypy  macros_test.py  match_game.py  match_game.ypy  namedloops.pyy  namedloops.ypy  test_match_game.py
