[build-system]
requires = ["setuptools >= 77.0.3"]
# can't add yeastr, unpublished yet!
build-backend = "setuptools.build_meta"

[build-system.extra.yeastr]
pythons."py313-none-any" = "/usr/lib/python-exec/python3.13/python"
pythons."py38-none-any" = "/usr/lib/python-exec/python3.8/python"
modules = [
    "src/yeastr_test/loops.py",
    "src/yeastr_test/macros.py",
    "src/yeastr_test/functional.py",
    "src/yeastr_test/match_game.py",
]

[tool.setuptools]
# See MANIFEST.in (yeastr_info.py required)
include-package-data = true  # actually default
py-modules = ["yeastr_info"]

[tool.setuptools.packages.find]
where = ["yeastr_info.py", "src"]

[project]
name = "yeastr_test"
version = "0.0.1"
authors = [
  { name="Castiglia Vincenzo", email="castix@autistici.org" },
]
description = "Example project for yeastr"
readme = "README.md"
requires-python = ">=3.8"
license = "PSF-2.0"

[project.urls]
Homepage = "https://github.com/CastixGitHub/yeastr-test"
Issues = "https://github.com/CastixGitHub/yeastr-test/issues"

