[build-system]
requires = ["setuptools >= 77.0.3"]
# can't add yeastr, unpublished yet!
build-backend = "setuptools.build_meta"

[project]
name = "yeastr_test"
version = "0.0.1"
authors = [
  { name="Castiglia Vincenzo", email="castix@autistici.org" },
]
description = "Example project for yeastr using src layout"
readme = "README.md"
license = "PSF-2.0"
requires-python = ">=3.8"
dependencies = [
    "yeastr",
]

[project.urls]
Homepage = "https://github.com/CastixGitHub/yeastr-test-proj"
Issues = "https://github.com/CastixGitHub/yeastr-test-proj/issues"

